# ai-study-architect

./: .env.example  .gitignore  .pre-commit-config.yaml  BACKUP_SECURITY.md  BACKUP_SETUP.md  CLAUDE.md  CLOUDFLARE_SETUP.md  CRITICAL_NOTES.md  CRITICAL_SESSION_SUMMARY_AUG_2025.md  DAILY_DEV_PLAN.md  DEPLOYMENT.md  DEPLOYMENT_NOTES.md  DEVELOPMENT.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_INDEX.md  LICENSE  MOVED_TO_NEW_REPO.md  PRODUCTION_NOTES.md  README.md  RENDER_MCP_SECURITY.md  RENDER_SETTINGS.md  SECURITY.md  SECURITY_AUDIT_2025.md  SECURITY_AUDIT_RESULTS_2025_08_25.md  SESSION_SUMMARY_2025-08-23.md  SETUP.md  SHIP_THIS_WEEK.md  STRATEGIC_PIVOT_SUMMARY.md  TROUBLESHOOTING.md  VERCEL_ENV_UPDATE.md  cloudflare-worker-correct.js  cloudflare-worker-fixed.js  cloudflare-worker-secure.js  cloudflare-worker-smart.js  cloudflare-worker.js  package-lock.json  test-backup.enc
.claude/: AGENTS_README.md  code-antipatterns.json  hookify.test-check.local.md
.githooks/: pre-commit
backend/: .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.render  README.md  RENDER_SETTINGS.md  alembic.ini  analyze_slide_images.py  build.sh  build_starter.sh  content_extraction_analysis.md  mypy.ini  pyproject.toml  pytest.ini  render-crons.yaml  render.yaml  requirements.txt  run.sh  start_render.sh
backend/alembic/: env.py
backend/alembic/versions/: 3c297453e3ed_initial_migration_with_user_content_.py  5f6e634ec8dc_add_database_indexes.py  942421c3cadb_add_subjects_table_and_session_fields.py  a1b2c3d4e5f6_add_chat_messages_table.py  b7c8d9e0f1a2_add_knowledge_graph_tables.py  c1d2e3f4a5b6_add_one_active_session_constraint.py  d1e2f3a4b5c6_add_fulltext_search_vector.py  edcfcde614ab_add_search_optimization_indexes.py  f8a1b2c3d4e5_add_user_concept_mastery_and_subject_fks.py
backend/app/: __init__.py  _path_setup.py  main.py
backend/app/agents/: __init__.py  base.py  lead_tutor.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/v1/: __init__.py  admin.py  admin_security.py  agents.py  api.py  auth.py  chat.py  concepts.py  content.py  csrf.py  dashboard.py  debug.py  health.py  study_sessions.py  subjects.py  test_review_bait.py  tutor.py  websocket.py
backend/app/api/v1/endpoints/: backup.py
backend/app/core/: agent_manager.py  cache.py  config.py  csrf.py  database.py  environments.py  exceptions.py  feature_flags.py  init_db_minimal.py  init_db_safe.py  monitoring.py  rsa_keys.py  security.py  security_headers.py  upstash_cache.py  utils.py
backend/app/models/: __init__.py  chat_message.py  concept.py  content.py  practice.py  study_session.py  subject.py  user.py  user_concept_mastery.py
backend/app/prompts/: __init__.py  knowledge_graph_extraction.py
backend/app/schemas/: agents.py  concept.py  content.py  mastery.py  study_session.py  subject.py  user.py
backend/app/services/: __init__.py  ai_service_manager.py  claude_service.py  concept_extraction.py  content_processor.py  openai_fallback.py  storage.py  vision_processor.py
backend/app/services/ai/: __init__.py
backend/app/utils/: file_validation.py  sanitization.py
backend/scripts/: backup_cron.sh  backup_database.py  backup_database_python.py  export_rsa_keys_b64.py  generate_rsa_keys.py
backend/tests/: __init__.py  conftest.py  spike_model_comparison.py  spike_structured_outputs.py  test_agents_api.py  test_ai_services.py  test_auth.py  test_cache_result.py  test_chat_persistence.py  test_claude_service.py  test_concept_extraction.py  test_concept_extraction_integration.py  test_concepts_api.py  test_content_delete.py  test_content_search.py  test_csrf.py  test_dashboard.py  test_file_validation.py  test_lead_tutor_agent.py  test_openai_fallback.py  test_rate_limiter.py  test_refresh_improvements.py  test_sanitization.py  test_security.py  utils.py
backend/tests/unit/: conftest.py  test_ai_service_manager.py  test_storage.py
design/: DESIGN.md  PRD.md  README.md
docs/: ARCHITECTURE.md  DOCUMENTATION_HIERARCHY.md  DOCUMENTATION_SYNCHRONIZATION_PLAN.md  GLOSSARY.md  GREAT_WORK_ALIGNMENT.md  IMPLEMENTATION_PLAN_WEEK1.md  IMPLEMENTATION_STATUS.md  NEW_DIRECTION_2025.md  README.md  (+3 more)
(+222 files in other folders)
