[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
# FastAPI endpoints: request (slowapi), current_user/admin_user/authorized/db (DI) are
# required by decorators/framework but unused in function bodies.
"app/api/v1/*.py" = ["ARG001"]
"app/api/v1/endpoints/*.py" = ["ARG001"]
# Rate-limited root/health endpoints + model registration imports after logging setup
"app/main.py" = ["ARG001", "E402"]
# _NoOpCache implements Redis interface — all args unused by design
"app/core/cache.py" = ["ARG002"]
# Agent base/subclass method signatures for interface conformance
"app/agents/*.py" = ["ARG002"]
# OpenAI stream param accepted but not yet implemented
"app/services/openai_fallback.py" = ["ARG002"]
# Validator signature consistency (mime_type unused in office validator)
"app/utils/file_validation.py" = ["ARG001"]
# Pytest fixtures referenced in signature for setup side-effects, not read in body
"tests/*.py" = ["ARG001", "ARG002"]
"tests/**/*.py" = ["ARG001", "ARG002"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "sqlalchemy"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "slow: marks tests as slow",
    "performance: marks tests as performance tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-study-architect"
version = "0.1.0"
description = "AI-powered personalized learning system"
authors = [{name = "AI Study Architect Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []  # Managed by requirements.txt